syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

option csharp_namespace = "Ligric.Protobuf";

package ligric.protobuf;

service Futures {
    rpc OrdersSubscribe(FuturesSubscribeRequest) returns (stream OrdersChanged){
      option (google.api.http).get = "/v1/futures/stream/orders";
	}
    rpc ValuesSubscribe(FuturesSubscribeRequest) returns (stream ValuesChanged){
      option (google.api.http).get = "/v1/futures/stream/values";
	}
    rpc PositionsSubscribe(FuturesSubscribeRequest) returns (stream PositionsChanged){
      option (google.api.http).get = "/v1/futures/stream/positions";
	}
}

message FuturesSubscribeRequest
{
	int64 userId = 1;
	int64 UserApiId = 2;
}

message OrdersChanged {
	FuturesOrder Order = 1;
	Action action = 2;
}

message ValuesChanged {
	FuturesValue Value = 1;
	Action action = 2;
}

message PositionsChanged {
	FuturesPosition Position = 1;
	Action action = 2;
}

message FuturesOrder {
	int64 id = 1;
	string symbol = 2;
	Side side = 3;
	string quantity = 4;
	string price = 5;
	string currentPrice = 6;
	string type = 7;
}

message FuturesValue
{
	string Symbol = 1;
	string Value = 2;
}

message FuturesPosition {
	int64 id = 1;
	string Symbol = 2;
	string EntryPrice = 3;
	Side Side = 4;
	string Quantity = 5;
}

enum Side
{
	Sell = 0;
	Buy = 1;
}
